feat: Restaurant Item 재사용

--- a/src/styles/modal.css
+++ b/src/styles/modal.css
@@ -23,7 +23,7 @@
   left: 0;
   width: 100%;
   z-index: 1000;
-  padding: 32px 16px;
+  padding: 16px;
   max-height: 90%;
   overflow-y: scroll;
 
