--- a/src/styles/restaurant-list.css
+++ b/src/styles/restaurant-list.css
@@ -63,3 +63,8 @@
   -webkit-line-clamp: 2;
   -webkit-box-orient: vertical;
 }
+
+.restaurant__favorite-button {
+  margin-left: auto;
+  cursor: pointer;
+}
