--- a/assets/index-BzxUSHp1.css
+++ b/assets/index-BzxUSHp1.css
@@ -50,32 +50,6 @@ body {
   line-height: 20px;
   font-weight: 400;
 }
-
-/* 음식점 목록 *****************************************/
-
-/* 카테고리/정렬 필터 */
-.restaurant-filter-container {
-  display: flex;
-  justify-content: space-between;
-
-  padding: 0 16px;
-  margin-top: 24px;
-}
-
-.restaurant-filter-container select {
-  height: 44px;
-  min-width: 125px;
-
-  border: 1px solid #d0d5dd;
-  border-radius: 8px;
-  background: transparent;
-
-  font-size: 16px;
-}
-
-.restaurant-filter {
-  padding: 8px;
-}
 #app {
   width: min(390px, 100%);
   margin: auto;
@@ -89,15 +63,12 @@ main {
   flex: 1;
   overflow-y: scroll;
 }
-/* GNB ********************************************/
 .gnb {
   display: flex;
   justify-content: space-between;
   align-items: center;
   height: 64px;
-
   padding: 0 16px;
-
   background-color: var(--primary-color);
 }
 
@@ -147,7 +118,7 @@ main {
   left: 0;
   width: 100%;
   z-index: 1000;
-  padding: 32px 16px;
+  padding: 16px;
   max-height: 90%;
   overflow-y: scroll;
 
@@ -156,6 +127,7 @@ main {
 }
 .modal-title {
   margin-bottom: 36px;
+  padding-top: 16px;
 }
 
 .form-item {
@@ -257,10 +229,13 @@ input[name="link"] {
 .restaurant {
   display: flex;
   align-items: flex-start;
-
   padding: 16px 8px;
-
   border-bottom: 1px solid #e9eaed;
+}
+
+.restaurant.restaurant-detailModal {
+  flex-direction: column;
+  gap: 20px;
 }
 
 .restaurant__category {
@@ -271,9 +246,7 @@ input[name="link"] {
   height: 64px;
   min-width: 64px;
   min-height: 64px;
-
   margin-right: 16px;
-
   border-radius: 50%;
   background: var(--lighten-color);
 }
@@ -293,17 +266,69 @@ input[name="link"] {
   margin: 0;
 }
 
-.restaurant__distance {
+.restaurant__distance,
+.restaurant__link {
   color: var(--primary-color);
 }
 
+.restaurant__link {
+  padding: 16px 0;
+  color: var(--gray-500);
+}
 .restaurant__description {
   display: -webkit-box;
-
   padding-top: 8px;
-
   overflow: hidden;
   text-overflow: ellipsis;
   -webkit-line-clamp: 2;
   -webkit-box-orient: vertical;
+}
+
+.restaurant__favorite-button {
+  margin-left: auto;
+  cursor: pointer;
+}
+/* 카테고리/정렬 필터 */
+.restaurant-filter-container {
+  display: flex;
+  justify-content: space-between;
+
+  padding: 0 16px;
+  margin-top: 24px;
+}
+
+.restaurant-filter-container select {
+  height: 44px;
+  min-width: 125px;
+
+  border: 1px solid #d0d5dd;
+  border-radius: 8px;
+  background: transparent;
+
+  font-size: 16px;
+}
+
+.restaurant-filter {
+  padding: 8px;
+}
+#tabBar {
+  display: grid;
+  grid-template-columns: repeat(2, 1fr);
+  padding-top: 20px;
+}
+
+#tabBar button {
+  background-color: var(--grey-100);
+  border: none;
+  border-bottom: 2px solid var(--grey-100);
+  padding: 10px 20px;
+  text-align: center;
+  text-decoration: none;
+  font-size: 16px;
+  font-weight: bold;
+}
+
+#tabBar button.active {
+  border-bottom: 2px solid var(--primary-color);
+  color: var(--primary-color);
 }
